--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -14,6 +15,21 @@
         {% endblock %}
     </head>
     <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href={{ path('home') }}>Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href={{ path('photo') }}>Photos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href={{ path('category') }}>Catégories</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="p-4">
         {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
