--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<h1>Dev Test</h1>
+<h1>Nuvola</h1>
 <p>Application Démo faite avec le Framework Symfony</p>
 <p>
   <a href="{{ path('photo') }}">Nos photos</a>
